# Izaj-Inventory

./: .gitignore  EXCEL_TEMPLATE_GUIDE.md  FIX_LOG_TRANSFER_TABLE.md  NOTIFICATIONS_README.md  QUICK_FIX_TRANSFERS.md  README.md  SYSTEM_FLOWCHART.md  TRANSFERRED_PRODUCTS_TABLE_SUMMARY.md  TRANSFER_TABLE_TROUBLESHOOTING.md  To-do.md  UPDATED_AT_IMPLEMENTATION.md  admin-credentials.txt  create_excel_sample.py  email_template_example.html  env.example  index.html  package-lock.json  package.json  sample_sales_data_lighting.csv  schema.sql  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
analytics/: QUICKSTART.md  README.md  __init__.py  app.py  db.py  eoq_calculator.py  pixi.toml  pyrightconfig.json  requirements.txt  routes.py
docs/: ACTION_ITEMS.md  DATABASE_INTEGRATION.md  DATABASE_TABLE_REFERENCE.md  EOQ_SYSTEM_OVERVIEW.md  EVALUATION_SUMMARY.md  FULL_SYSTEM_FLOWCHART.html  HOW_TO_RUN_SERVERS.md  NOTIFICATIONS_IMPLEMENTATION_SUMMARY.md  NOTIFICATIONS_INTEGRATION_GUIDE.md  NOTIFICATIONS_REDIRECT_LINKS.md  NOTIFICATIONS_SYSTEM.md  SYSTEM_EVALUATION_REPORT.md  SYSTEM_FLOWCHART.html  SYSTEM_FLOWCHART_MERMAID.md  TRANSFER_WORKFLOW_EXAMPLE.md
eoqguide/: ALTER_DATABASE.sql  ALTER_INVENTORY_ANALYTICS.sql  ANALYTICS_IMPLEMENTATION.md  ARCHITECTURE.md  CALCULATE_EOQ_FIX.md  CHANGES_MADE.md  CHARTS_PRODUCT_ANALYTICS_GUIDE.md  CODE_CHANGES_REFERENCE.md  DELIVERY_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPORT_FIX_COMPLETE.md  INDEX.md  PACKAGE_JSON_UPDATES.md  (+22 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
(+124 files in other folders)
