[package]
name = "izajlightingcentre"
version = "0.3.0"
description = "A Tauri App"
authors = ["Aurex"]

#change it back to 2024 if its not working for you!!
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "izaj_lib"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 256
lto = false
incremental = true
opt-level = 2

